NetBSD Problem Report #44248

From www@NetBSD.org  Fri Dec 17 19:07:20 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 2D1D863B886
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 17 Dec 2010 19:07:20 +0000 (UTC)
Message-Id: <20101217190719.E9CF163B87A@www.NetBSD.org>
Date: Fri, 17 Dec 2010 19:07:19 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: syslog() from a multithreaded program hangs
X-Send-Pr-Version: www-1.0

>Number:         44248
>Category:       lib
>Synopsis:       syslog() from a multithreaded program hangs
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 17 19:10:06 +0000 2010
>Closed-Date:    Sun Dec 19 07:04:18 +0000 2010
>Last-Modified:  Thu Dec 30 22:25:01 +0000 2010
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
After 2010.12.16.15.29.28 syslog() from a multi-threaded
program started hanging.  The stacktrace is:

(gdb) bt
#0  0xbbb35e87 in ___lwp_park50 () from /usr/lib/libc.so.12
#1  0xbbbe3d89 in pthread__park () from /usr/lib/libpthread.so.1
#2  0xbbbe0bc1 in pthread_rwlockattr_destroy () from /usr/lib/libpthread.so.1
#3  0xbbb599f0 in __tzset50 () from /usr/lib/libc.so.12
#4  0xbbb55f0c in strftime () from /usr/lib/libc.so.12
#5  0xbbb9cb0c in vsyslogp_r () from /usr/lib/libc.so.12
#6  0xbbb9d398 in vsyslog_r () from /usr/lib/libc.so.12
#7  0xbbb9d450 in vsyslog () from /usr/lib/libc.so.12
#8  0xbbb9d5f1 in syslog () from /usr/lib/libc.so.12
#9  0x080486b8 in main () at testi.c:7

>How-To-Repeat:
Look at test run output, observe all LFS tests hanging.  Confirm
problem with a very simple program which just calls
syslog() from main().

I'll commit a test to tests/lib/libc/gen/t_syslog_pthread
>Fix:

>Release-Note:

>Audit-Trail:
From: "Antti Kantee" <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44248 CVS commit: src/tests/lib/libc/gen
Date: Fri, 17 Dec 2010 19:12:31 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Fri Dec 17 19:12:30 UTC 2010

 Modified Files:
 	src/tests/lib/libc/gen: Makefile
 Added Files:
 	src/tests/lib/libc/gen: t_syslog_pthread.c

 Log Message:
 Add an isolated test case for PR lib/44248.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/tests/lib/libc/gen/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/lib/libc/gen/t_syslog_pthread.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44248 CVS commit: src/lib/libc/time
Date: Fri, 17 Dec 2010 18:11:57 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Fri Dec 17 23:11:57 UTC 2010

 Modified Files:
 	src/lib/libc/time: localtime.c

 Log Message:
 PR/44248: Antti Kantee: Fix multi-threaded localtime hang.


 To generate a diff of this commit:
 cvs rdiff -u -r1.49 -r1.50 src/lib/libc/time/localtime.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 19 Dec 2010 07:04:18 +0000
State-Changed-Why:
jruoho confirms fixed on source-changes-d.


From: "Antti Kantee" <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44248 CVS commit: src/tests/lib/libc/gen
Date: Thu, 30 Dec 2010 22:21:53 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Thu Dec 30 22:21:53 UTC 2010

 Modified Files:
 	src/tests/lib/libc/gen: t_syslog_pthread.c

 Log Message:
 Test is no longer expected to hang.

 PR lib/44248 closed when test associate with PR fails ==> brick dholland


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/tests/lib/libc/gen/t_syslog_pthread.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.