PR/44248: Antti Kantee: Fix multi-threaded localtime hang.